add search history logic